--- a/templates/bife_page.tpl.html
+++ b/templates/bife_page.tpl.html
@@ -6,7 +6,9 @@
         <H1>{TITLE}</H1>
         {CONTENTS}
         <HR noshade="noshade" size="2"/>
-        <A href="?S=1&B=1">View BIFE (xbf) source</A> |
-        <A href="?S=1">View PHP source</A>
+        <DIV style="text-align: right">
+            <A href="?S=1&B=1">Ver fuente de BIFE (archivo .xbf)</A> |
+            <A href="?S=1">Ver fuente PHP (archivo .php)</A>
+        </DIV>
     </BODY>
 </HTML>
