--- a/templates/bife_page.tpl.html
+++ b/templates/bife_page.tpl.html
@@ -7,8 +7,8 @@
         {CONTENTS}
         <HR noshade="noshade" size="2"/>
         <DIV style="text-align: right">
-            <A href="?S=1&B=1">Ver fuente de BIFE (archivo .xbf)</A> |
-            <A href="?S=1">Ver fuente PHP (archivo .php)</A>
+            <A href="?S=1&B=1">Ver código fuente BIFE (archivo .xbf)</A> |
+            <A href="?S=1">Ver código fuente PHP (archivo .php)</A>
         </DIV>
     </BODY>
 </HTML>
