--- a/templates/bife_page.tpl.html
+++ b/templates/bife_page.tpl.html
@@ -8,7 +8,9 @@
         <HR noshade="noshade" size="2"/>
         <DIV style="text-align: right">
             <A href="?S=1&B=1">Ver código fuente BIFE (archivo .xbf)</A> |
-            <A href="?S=1">Ver código fuente PHP (archivo .php)</A>
+            <A href="?S=1">Ver código fuente PHP (archivo .php)</A> |
+            <A href="?H=1">Ver salida HTML generada</A> |
+            <A href="templates/">Ver <EM>templates</EM> (archivos .tpl.html)</A>
         </DIV>
     </BODY>
 </HTML>
